GNOME Bugzilla – Bug 758337
qtglwidget qtitem: missing opengl context initialization
Last modified: 2016-04-01 05:56:45 UTC
Created attachment 315883 [details] [review] qtglwidget qtitem: proper initialization if scene is already initialized When qtglwidget is created after main window initialization opengl context isn't initialized properly. Example: 1. Setup timer witch trigger loding GstGLVideoItem in Loder element. In result of creating qtglwidget following error is provided: CRITICAL **: gst_gl_context_activate: assertion 'GST_GL_IS_CONTEXT (context)' failed I'm attaching simple example, result of running with GST_DEBUG=qt*:5 and basic patch to resolve this problem.
Created attachment 315885 [details] result of running with GST_DEBUG=qt*:5
Created attachment 315886 [details] simple example
commit 27c94f337562e57fd93c8bfc769ddc150f6da22f Author: Roman Nowicki <rnowicki@sims.pl> Date: Thu Nov 19 11:55:19 2015 +0100 qml: proper initialization if scene is already initialized The scene graph can be initialized when the we receive window handle change notification and so we will not receive a scenegraph initialization notification. Initialize ourself in this case. https://bugzilla.gnome.org/show_bug.cgi?id=758337 and 1.6 462f38f735c43fd446d881d805e67ca3a44c724c
Exact problem exists for 1.7.91 if app tries to play video just after QML initialization. So need to add delay before changing pipeline state to PLAYING.
Please create a new bug with an example.